--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,8 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.2.2/schema.json",
+	"formatter": {
+		"indentStyle": "space"
+	},
 	"organizeImports": {
 		"enabled": true
 	},
@@ -7,6 +10,11 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true
+		}
+	},
+	"javascript": {
+		"formatter": {
+			"semicolons": "asNeeded"
 		}
 	}
 }
