--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
+    "dev": "bun run ./index.ts",
     "format": "bunx @biomejs/biome format --write index.ts ./domain/ ./infrastructure/ ./std/ ./tests/"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.2.2",
-    "bun-types": "latest"
+    "@biomejs/biome": "1.8.3",
+    "bun-types": "^1.1.25"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.5.4"
   }
 }
